fix(model): carry the repository lookup order through the adapter